# dynamic-econ

./: .gitignore  main.py  pyproject.toml
notebooks/: chapter_1.ipynb  chapter_1.py
