[project]
name = "dynamic-econ"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arviz[all]>=0.22.0",
    "bambi>=0.15.0",
    "fastexcel>=0.16.0",
    "jupytext>=1.17.3",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "pyarrow>=21.0.0",
    "scipy>=1.16.2",
    "statsmodels>=0.14.5",
]

[dependency-groups]
dev = [
    "cairosvg>=2.8.2",
    "jupyter>=1.1.1",
    "jupytext>=1.17.3",
    "kaleido>=1.1.0",
    "pnglatex>=1.1",
    "pynvim>=0.6.0",
    "pyperclip>=1.11.0",
]
